<resources>
    <string name="app_name">RentalZ</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="tap_to_add_date">Tap to add Date</string>
    <string name="tap_to_add_time">Tap to add Time</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="time">Time</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="add_note">Add Note</string>
    <string name="testing">Testing</string>
    <string name="search">search</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="rentalz">RentalZ</string>
    <string name="update">Update</string>
    <string name="monthly_rent_price">Monthly Rent Price</string>
    <string name="notes">Notes</string>
    <string name="reporter_name">Reporter Name</string>
    <string name="add_property">Add Property</string>
</resources>