<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/LogoLogin"
            android:layout_width="300dp"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo"
            />

        <EditText
            android:id="@+id/txt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LogoLogin"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/input_design"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/teal_200"
            android:textSize="17sp"
            />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_phone_number"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/input_design"
            android:layout_marginTop="6dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/teal_200"
            android:textSize="17sp"

            />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="17dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/login"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="10dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginLeft="90dp"
                />

            <TextView
                android:id="@+id/link_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/teal_200"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>





    </RelativeLayout>



</RelativeLayout>